syntax = "proto3";
package io.github.patxibocos.pcsscraper.protobuf;
option go_package = "github.com/patxibocos/pcsscraper";

import "google/protobuf/timestamp.proto";

message Race {
  string id = 1;
  string name = 2;
  string country = 3;
  repeated Stage stages = 4;
  repeated TeamParticipation teams = 5;
  optional string website = 6;
  repeated ParticipantResult result = 7;
}

message Stage {
  string id = 1;
  google.protobuf.Timestamp start_date_time = 2;
  float distance = 3;
  repeated ParticipantResult result = 4;
  ProfileType profile_type = 5;
  optional string departure = 6;
  optional string arrival = 7;
  StageType stage_type = 8;
  repeated ParticipantResult gcResult = 9;

  enum ProfileType {
    PROFILE_TYPE_UNSPECIFIED = 0;
    PROFILE_TYPE_FLAT = 1;
    PROFILE_TYPE_HILLS_FLAT_FINISH = 2;
    PROFILE_TYPE_HILLS_UPHILL_FINISH = 3;
    PROFILE_TYPE_MOUNTAINS_FLAT_FINISH = 4;
    PROFILE_TYPE_MOUNTAINS_UPHILL_FINISH = 5;
  }

  enum StageType {
    STAGE_TYPE_UNSPECIFIED = 0;
    STAGE_TYPE_REGULAR = 1;
    STAGE_TYPE_INDIVIDUAL_TIME_TRIAL = 2;
    STAGE_TYPE_TEAM_TIME_TRIAL = 3;
  }
}

message TeamParticipation {
  string team_id = 1;
  repeated RiderParticipation riders = 2;
}

message ParticipantResult {
  uint32 position = 1;
  string participant_id = 2;
  int64 time = 3;
}

message RiderParticipation {
  string rider_id = 1;
  optional uint32 number = 2;
}