syntax = "proto3";
package io.github.patxibocos.pcsscraper.protobuf.rider;

import "google/protobuf/timestamp.proto";

message Rider {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string country = 4;
  google.protobuf.Timestamp birth_date = 5;
  string photo = 6;
  string website = 7;
  string birth_place = 8;
  uint32 weight = 9;
  uint32 height = 10;
}
